# moonshot

./: .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  example_usage.py  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
docs/: api.md  installation.md  usage.md
examples/: README.md  tutorial.ipynb
moonshot/: __init__.py  helper.py  metrics.py  moonshot.py  performance_analyzer.py
tests/: __init__.py  test_factor_weighting.py  test_helper.py  test_moonshot.py
