[tool]
[tool.poetry]
name = "moonshot"
version = "0.2.0"
homepage = "https://github.com/zillionare/moonshot"
description = "Alphalens lacks accurate monthly factor testing; our library delivers it.."
authors = ["aaron yang <code@jieyu.ai>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
packages = [
    { include = "moonshot" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fire = ">=0.4.0"

black  = { version = "^22.3.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "4.0.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^7.0.1", optional = true}
pytest-cov  = { version = "^3.0.0", optional = true}
tox  = { version = "^3.24.5", optional = true}
mkdocs  = { version = "^1.2.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.2.3", optional = true}
mkdocs-material  = { version = "^8.1.11", optional = true}
mkdocstrings  = { version = "^0.18.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.3", optional = true}
twine  = { version = "^3.8.0", optional = true}
mkdocs-autorefs = {version = "^0.3.1", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
mike = { version="^1.1.2", optional=true}
mypy = {version = "^1.5.1", optional = true}
setuptools = {version="^68.0", optional = true}
pkginfo = {version="^1.9", optional = true}
virtualenv = {version="^20.0", optional = true}
matplotlib = ">=3.5.0,<4.0.0"
typing-extensions = "^4.14.0"
jinja2 = "^3.1.6"
loguru = "^0.7.3"
polars = "^1.35.1"
pandas = "^2.3.3"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov"
    ]

dev = ["tox",
    "pre-commit",
    "twine",
    "toml",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "mypy"
    ]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mike",
    "setuptools",
    "pkginfo",
    "virtualenv"
    ]

[tool.poetry.scripts]
moonshot = 'moonshot.cli:main'

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "ustc"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.250527"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''
[tool.isort]
profile = "black"
